# libtftp

./: AUTHORS  Doxyfile  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  configure.in.in  libtftp.kdevelop  libtftp.kdevelop.pcs
admin/: am_edit
autom4te.cache/: output.0  requests  traces.0
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
po/: Makefile.in
src/: Makefile.am  Makefile.in  client.cpp  client.h  clientread.cpp  clientread.h  clientwrite.cpp  clientwrite.h  readsession.cpp  readsession.h  server.cpp  server.h  serverread.cpp  serverread.h  serverwrite.cpp  serverwrite.h  session.cpp  session.h  tftp.cpp  tftp.h  utils.h  writesession.cpp  writesession.h
templates/: cpp
